--- a/index.html
+++ b/index.html
@@ -54,10 +54,10 @@
                      <div class="collapse navbar-collapse" id="navbarsExample04">
                         <ul class="navbar-nav mr-auto">
                            <li class="nav-item active">
-                              <a class="nav-link" href="index.html">Home 2099</a>
+                              <a class="nav-link" href="index.html">Home Main</a>
                            </li>
                            <li class="nav-item">
-                              <a class="nav-link" href="about.html">About 2023</a>
+                              <a class="nav-link" href="about.html">About</a>
                            </li>
                            <li class="nav-item">
                               <a class="nav-link" href="skating.html">skating</a>
